--- a/Snapchat/Base.lproj/Main.storyboard
+++ b/Snapchat/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -74,11 +73,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2481" y="36"/>
         </scene>
         <!--Snaps View Controller-->
         <scene sceneID="sM1-Sr-hfI">
             <objects>
-                <viewController id="z8C-jA-gdA" customClass="SnapsViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="z8C-jA-gdA" customClass="SnapsViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="p9M-US-tOb"/>
                         <viewControllerLayoutGuide type="bottom" id="B53-hU-QDU"/>
@@ -86,7 +86,19 @@
                     <view key="view" contentMode="scaleToFill" id="4SH-o2-PB0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sx7-mu-oUr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sx7-mu-oUr" firstAttribute="leading" secondItem="4SH-o2-PB0" secondAttribute="leading" id="50p-Ul-k46"/>
+                            <constraint firstItem="B53-hU-QDU" firstAttribute="top" secondItem="sx7-mu-oUr" secondAttribute="bottom" id="dQZ-oP-biC"/>
+                            <constraint firstItem="sx7-mu-oUr" firstAttribute="top" secondItem="p9M-US-tOb" secondAttribute="bottom" id="ew9-qW-uNy"/>
+                            <constraint firstAttribute="trailing" secondItem="sx7-mu-oUr" secondAttribute="trailing" id="hUw-Ko-MNM"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nt5-AD-MTO">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="50G-No-sqM">
@@ -100,6 +112,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="sx7-mu-oUr" id="TyR-zp-bug"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kq7-f0-h6X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -118,14 +133,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n9F-UK-Az2">
-                                <rect key="frame" x="67" y="93" width="97" height="169"/>
+                                <rect key="frame" x="87.5" y="93" width="200" height="169"/>
                                 <color key="backgroundColor" red="0.34199665987338868" green="0.045105311204904908" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Ep9-pA-7tX"/>
+                                </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oo0-Yw-X9e">
-                                <rect key="frame" x="67.5" y="312" width="97" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="uoe-tL-DAn"/>
-                                </constraints>
+                                <rect key="frame" x="88" y="312" width="200" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -145,7 +160,6 @@
                             <constraint firstItem="Oo0-Yw-X9e" firstAttribute="top" secondItem="n9F-UK-Az2" secondAttribute="bottom" constant="50" id="CeW-PJ-13C"/>
                             <constraint firstItem="n9F-UK-Az2" firstAttribute="top" secondItem="sis-xA-I3E" secondAttribute="bottom" constant="29" id="E3J-3a-6mr"/>
                             <constraint firstItem="n9F-UK-Az2" firstAttribute="centerX" secondItem="Oo0-Yw-X9e" secondAttribute="centerX" id="KvY-ff-bjH"/>
-                            <constraint firstItem="n9F-UK-Az2" firstAttribute="leading" secondItem="G8Y-Or-NGY" secondAttribute="leadingMargin" constant="51" id="PWU-Wx-3wq"/>
                             <constraint firstItem="Rn8-aZ-3HC" firstAttribute="top" secondItem="Oo0-Yw-X9e" secondAttribute="bottom" constant="325" id="bG2-Nm-ACK"/>
                             <constraint firstItem="n9F-UK-Az2" firstAttribute="centerX" secondItem="G8Y-Or-NGY" secondAttribute="centerX" id="fgW-5F-JXs"/>
                             <constraint firstItem="bpn-ed-cET" firstAttribute="top" secondItem="Oo0-Yw-X9e" secondAttribute="bottom" constant="41" id="jTc-k3-hSA"/>
@@ -162,12 +176,12 @@
                         <outlet property="descriptionText" destination="Oo0-Yw-X9e" id="bYr-eg-QTg"/>
                         <outlet property="imageView" destination="n9F-UK-Az2" id="aaR-AD-sxa"/>
                         <outlet property="nextButton" destination="bpn-ed-cET" id="ymL-UE-rZp"/>
-                        <segue destination="HvR-hS-nda" kind="show" identifier="selectUserSegue" id="hID-WR-4An"/>
+                        <segue destination="HvR-hS-nda" kind="show" identifier="selectUserSegue" id="Bgy-89-S9g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YVF-dc-yG7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2462" y="36"/>
+            <point key="canvasLocation" x="3306" y="36"/>
         </scene>
         <!--Select User View Controller-->
         <scene sceneID="cOK-5t-rPm">
@@ -200,7 +214,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jYR-Ck-9CJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3202" y="36"/>
+            <point key="canvasLocation" x="4142" y="36"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qOf-HJ-vGN">
